--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.10.0",
+    "graphql": "^15.4.0",
+    "graphql-request": "^3.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.5.11",
